exports[`Beam > e2e tetsts - mobile #0`] = `
<div class="landing-page">
  <div class="header-container">
    <nav class="public-navbar">
      <div>
        <img alt="beam" src="/static/media/beam-logo-dark.f3a266f1.png" />
      </div>
      <button class="btn">Log in</button>
    </nav>
    <div class="header-grid">
      <div class="text-grid">
        <h1>Find local friends you’ll spend hours chatting with.</h1>
        <div class="check-list">
          <div class="check">
            <svg
              stroke="currentColor"
              fill="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              class="icon"
              height="1em"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              ></path>
            </svg>
            <p>Match with people near you who share your interests</p>
          </div>
          <div class="check">
            <svg
              stroke="currentColor"
              fill="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              class="icon"
              height="1em"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              ></path>
            </svg>
            <p>No Ads. Ever.</p>
          </div>
          <div class="check">
            <svg
              stroke="currentColor"
              fill="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              class="icon"
              height="1em"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              ></path>
            </svg>
            <p>Beam messages to your friends</p>
          </div>
          <div class="check">
            <svg
              stroke="currentColor"
              fill="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              class="icon"
              height="1em"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              ></path>
            </svg>
            <p>Completely private</p>
          </div>
          <div class="check">
            <svg
              stroke="currentColor"
              fill="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              class="icon"
              height="1em"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              ></path>
            </svg>
            <p>No blue theme</p>
          </div>
        </div>
        <button
          data-test-id="landing-page-signup-header"
          class="btn btn-primary"
        >
          Sign up with Google
        </button>
      </div>
      <div class="image-grid">
        <img
          alt="Mobile screenshot of beam"
          src="/static/media/screenshot.89ddc213.png"
        />
      </div>
    </div>
  </div>
  <div class="text-container">
    <div class="text-box">
      <h2><span>Hey folks,</span></h2>
      <p><span>TL;DR</span></p>
      <p><span>We’ve built a new private social networking platform.</span></p>
      <p><span>Its called Beam.</span></p>
      <p>
        <span
          >It links your YouTube, Spotify, and Reddit accounts. Then using your
          interests on these platforms, it matches you with someone nearby you
          can chat with.</span
        >
      </p>
      <p><span>There will never be Ads on our platform.</span></p>
      <p>
        <span
          >We believe its amazing and we want you to be a part of it and the
          future we’re building at Beam.</span
        >
      </p>
      <h2><span>Long version</span></h2>
      <p><span>Social media sucks and we all know it.</span></p>
      <p>
        <span
          >You have “friends” that aren’t really your friends. Followers that
          don’t know the real you. People sharing the best moments of their
          lives rather than real moments in their lives.</span
        >
      </p>
      <p><span>Let’s not mention the trolls.</span></p>
      <p>
        <span
          >Facebook, Twitter, and Snap promised us a lot of things. Friends,
          happiness, a group you can belong to—but they failed on a lot of those
          promises.</span
        >
      </p>
      <p>
        <span
          >Instead, social media's a place where people post glamorous images of
          their lives and make other people feel bad for having a normal
          day.</span
        >
      </p>
      <p>
        <span
          >And when those same people feel bad, they bottle it up inside—because
          you can’t look bad for the grams, can you?</span
        >
      </p>
      <p>
        <span
          >Social media has become a place where people can’t share the stupid,
          frustrating, happy, crazy moments of their lives because they’re
          afraid someone will think less of them or worse; that no one will even
          care.</span
        >
      </p>
      <p>
        <span
          >Social media today is all about likes, shares, and retweets. And
          Ads...so many Ads.</span
        >
      </p>
      <p>
        <span>We believe our social lives on the internet can be better.</span>
      </p>
      <p>
        <span
          >We’re doing this by removing everything that makes “Old Social” bad.
          Starting with the word “media”; because no one's really themselves in
          front of the media.</span
        >
      </p>
      <p><span>Ads also have to go. </span></p>
      <p>
        <span
          >No one wakes up in the morning happy to see another Ad. We believe
          there are better ways to make money on the internet beyond the
          outdated Ad model.</span
        >
      </p>
      <p>
        <span
          >Next to go are the fake internet points; share count, followers, and
          likes—are all out.</span
        >
      </p>
      <p>
        <span
          >When you take all of these away, what you’re left with is a private
          place where you can be authentic with real friends, share any moment
          in your life, and ask for help without being judged.</span
        >
      </p>
      <p>
        <span
          >As introverts ourselves, we know that there’s a lot of loneliness in
          the world, we’ve all felt it.</span
        >
      </p>
      <p>
        <span
          >And that's why we made it possible to also find other people near you
          who share your interests on platforms like YouTube, Spotify, and
          Reddit.</span
        >
      </p>
      <p>
        <span
          >We don't want your data for anything else. We only use your location,
          YouTube subscriptions, Reddit subreddits, liked songs, and followed
          artists on Spotify to match you with others you'd love to chat with as
          our planet recovers from this pandemic.</span
        >
      </p>
      <p>
        <span
          >And if we can't find you a match immediately please give us a few
          days as more people join and we'll try to find someone you vibe
          with.</span
        >
      </p>
      <p>
        <span
          >This private corner of the internet we've made; where you can find
          new friends that just get you and share what you want with them is
          called Beam.</span
        >
      </p>
      <p>
        <span
          >And because we want Beam to be a place where you engage with friends
          and not a place to store contacts. You can only have a maximum of 15
          friends on your Beam account.</span
        >
      </p>
      <p>
        <span
          >Beam keeps all the things we love about social media; finding new
          people who share your interests, showing a friend that cool meme, or
          chatting for hours about the things we love with someone that gets
          it.</span
        >
      </p>
      <p><span>Beam is a place where you can be the real you.</span></p>
      <p>
        <span
          >This is just the beginning, there's so much more to come. And every
          day we’re working really hard to make beaming your friends an amazing
          experience.</span
        >
      </p>
      <p>
        <span
          >Finally, rather than being hosted on the Play Store or App Store,
          Beam is a progressive web app.</span
        >
      </p>
      <p>
        <span
          >Meaning you can open it on any mobile browser with just the link
          (<span class="text-link">usebeam.chat</span>) but the beauty is that
          you can also download it through your browser and it'll work just like
          any app on your phone.</span
        >
      </p>
      <p>
        <span
          >There's no distinction between Android and IOS users. The future we
          want to help build is amazing and we want you with us.</span
        >
      </p>
      <p>
        <span
          >So if this makes sense to you: sign up with google and tell everyone
          you know about Beam.</span
        >
      </p>
      <div class="text-box-cta">
        <button class="btn btn-primary">Sign up with Google</button>
      </div>
    </div>
  </div>
  <footer class="public-footer">
    <p class="feedback-text">
      If you’ve got any questions, feedback or improvement ideas, we’ve created
      a subreddit (<a href="https://www.reddit.com/r/beam_me/">r/beam_me</a>),
      where you can tell us about it.
    </p>
    <div class="grid-container-footer">
      <div class="grid-1-footer">
        <p><a href="https://usebeam.chat/privacy-policy">Privacy Policy</a></p>
      </div>
      <div class="grid-2-footer">
        <p>
          <a href="https://usebeam.chat/terms-and-condition">Terms of Use</a>
        </p>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Landing page > loads page <snapshot> #0`] = `
<div class="landing-page">
  <div class="header-container">
    <nav class="public-navbar">
      <div>
        <img alt="beam" src="/static/media/beam-logo-dark.f3a266f1.png" />
      </div>
      <button class="btn">Log in</button>
    </nav>
    <div class="header-grid">
      <div class="text-grid">
        <h1>Find local friends you’ll spend hours chatting with.</h1>
        <div class="check-list">
          <div class="check">
            <svg
              stroke="currentColor"
              fill="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              class="icon"
              height="1em"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              ></path>
            </svg>
            <p>Match with people near you who share your interests</p>
          </div>
          <div class="check">
            <svg
              stroke="currentColor"
              fill="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              class="icon"
              height="1em"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              ></path>
            </svg>
            <p>No Ads. Ever.</p>
          </div>
          <div class="check">
            <svg
              stroke="currentColor"
              fill="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              class="icon"
              height="1em"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              ></path>
            </svg>
            <p>Beam messages to your friends</p>
          </div>
          <div class="check">
            <svg
              stroke="currentColor"
              fill="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              class="icon"
              height="1em"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              ></path>
            </svg>
            <p>Completely private</p>
          </div>
          <div class="check">
            <svg
              stroke="currentColor"
              fill="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              class="icon"
              height="1em"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
              ></path>
            </svg>
            <p>No blue theme</p>
          </div>
        </div>
        <button class="btn btn-primary">Sign up with Google</button>
      </div>
      <div class="image-grid">
        <img
          alt="Mobile screenshot of beam"
          src="/static/media/screenshot.89ddc213.png"
        />
      </div>
    </div>
  </div>
  <div class="text-container">
    <div class="text-box">
      <h2><span>Hey folks,</span></h2>
      <p><span>TL;DR</span></p>
      <p><span>We’ve built a new private social networking platform.</span></p>
      <p><span>Its called Beam.</span></p>
      <p>
        <span
          >It links your YouTube, Spotify, and Reddit accounts. Then using your
          interests on these platforms, it matches you with someone nearby you
          can chat with.</span
        >
      </p>
      <p><span>There will never be Ads on our platform.</span></p>
      <p>
        <span
          >We believe its amazing and we want you to be a part of it and the
          future we’re building at Beam.</span
        >
      </p>
      <h2><span>Long version</span></h2>
      <p><span>Social media sucks and we all know it.</span></p>
      <p>
        <span
          >You have “friends” that aren’t really your friends. Followers that
          don’t know the real you. People sharing the best moments of their
          lives rather than real moments in their lives.</span
        >
      </p>
      <p><span>Let’s not mention the trolls.</span></p>
      <p>
        <span
          >Facebook, Twitter, and Snap promised us a lot of things. Friends,
          happiness, a group you can belong to—but they failed on a lot of those
          promises.</span
        >
      </p>
      <p>
        <span
          >Instead, social media's a place where people post glamorous images of
          their lives and make other people feel bad for having a normal
          day.</span
        >
      </p>
      <p>
        <span
          >And when those same people feel bad, they bottle it up inside—because
          you can’t look bad for the grams, can you?</span
        >
      </p>
      <p>
        <span
          >Social media has become a place where people can’t share the stupid,
          frustrating, happy, crazy moments of their lives because they’re
          afraid someone will think less of them or worse; that no one will even
          care.</span
        >
      </p>
      <p>
        <span
          >Social media today is all about likes, shares, and retweets. And
          Ads...so many Ads.</span
        >
      </p>
      <p>
        <span>We believe our social lives on the internet can be better.</span>
      </p>
      <p>
        <span
          >We’re doing this by removing everything that makes “Old Social” bad.
          Starting with the word “media”; because no one's really themselves in
          front of the media.</span
        >
      </p>
      <p><span>Ads also have to go. </span></p>
      <p>
        <span
          >No one wakes up in the morning happy to see another Ad. We believe
          there are better ways to make money on the internet beyond the
          outdated Ad model.</span
        >
      </p>
      <p>
        <span
          >Next to go are the fake internet points; share count, followers, and
          likes—are all out.</span
        >
      </p>
      <p>
        <span
          >When you take all of these away, what you’re left with is a private
          place where you can be authentic with real friends, share any moment
          in your life, and ask for help without being judged.</span
        >
      </p>
      <p>
        <span
          >As introverts ourselves, we know that there’s a lot of loneliness in
          the world, we’ve all felt it.</span
        >
      </p>
      <p>
        <span
          >And that's why we made it possible to also find other people near you
          who share your interests on platforms like YouTube, Spotify, and
          Reddit.</span
        >
      </p>
      <p>
        <span
          >We don't want your data for anything else. We only use your location,
          YouTube subscriptions, Reddit subreddits, liked songs, and followed
          artists on Spotify to match you with others you'd love to chat with as
          our planet recovers from this pandemic.</span
        >
      </p>
      <p>
        <span
          >And if we can't find you a match immediately please give us a few
          days as more people join and we'll try to find someone you vibe
          with.</span
        >
      </p>
      <p>
        <span
          >This private corner of the internet we've made; where you can find
          new friends that just get you and share what you want with them is
          called Beam.</span
        >
      </p>
      <p>
        <span
          >And because we want Beam to be a place where you engage with friends
          and not a place to store contacts. You can only have a maximum of 15
          friends on your Beam account.</span
        >
      </p>
      <p>
        <span
          >Beam keeps all the things we love about social media; finding new
          people who share your interests, showing a friend that cool meme, or
          chatting for hours about the things we love with someone that gets
          it.</span
        >
      </p>
      <p><span>Beam is a place where you can be the real you.</span></p>
      <p>
        <span
          >This is just the beginning, there's so much more to come. And every
          day we’re working really hard to make beaming your friends an amazing
          experience.</span
        >
      </p>
      <p>
        <span
          >Finally, rather than being hosted on the Play Store or App Store,
          Beam is a progressive web app.</span
        >
      </p>
      <p>
        <span
          >Meaning you can open it on any mobile browser with just the link
          (<span class="text-link">usebeam.chat</span>) but the beauty is that
          you can also download it through your browser and it'll work just like
          any app on your phone.</span
        >
      </p>
      <p>
        <span
          >There's no distinction between Android and IOS users. The future we
          want to help build is amazing and we want you with us.</span
        >
      </p>
      <p>
        <span
          >So if this makes sense to you: sign up with google and tell everyone
          you know about Beam.</span
        >
      </p>
      <div class="text-box-cta">
        <button class="btn btn-primary">Sign up with Google</button>
      </div>
    </div>
  </div>
  <footer class="public-footer">
    <p class="feedback-text">
      If you’ve got any questions, feedback or improvement ideas, we’ve created
      a subreddit (<a href="https://www.reddit.com/r/beam_me/">r/beam_me</a>),
      where you can tell us about it.
    </p>
    <div class="grid-container-footer">
      <div class="grid-1-footer">
        <p><a href="https://usebeam.chat/privacy-policy">Privacy Policy</a></p>
      </div>
      <div class="grid-2-footer">
        <p>
          <a href="https://usebeam.chat/terms-and-condition">Terms of Use</a>
        </p>
      </div>
    </div>
  </footer>
</div>
`;
